--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
-
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
     <!-- NAVBAR -->
     <div class="nav-wrapper">
-        <div class="container">
+        <div class="container-fluid px-0">
             <nav class="d-flex justify-content-between align-items-center">
                 <!-- Logo -->
                 <div class="logo">
@@ -27,7 +26,8 @@
                     <a href="#" class="nav-link">Services</a>
                     <a href="#" class="nav-link">Work</a>
                     <a href="#" class="nav-link">About me</a>
-                    <button class="btn btn-outline-success">Contact</button>
+                    <button type="button" class="btn contact-btn rounded-2 d-flex">Contact <img
+                            src="assets/images/contact_arrow.svg" alt="arrow"></button>
                 </div>
 
                 <!-- Custom Hamburger for Mobile -->
@@ -44,16 +44,19 @@
     <div class="overlay">
         <div class="overlay-menu">
             <div class="menu-item">
-                <p id="active"><a href="#">Services</a></p>
+                <p id="active"><a href="#" class="nav-link">Services</a></p>
             </div>
             <div class="menu-item">
-                <p><a href="#">Work</a></p>
+                <p><a href="#" class="nav-link">Work</a></p>
             </div>
             <div class="menu-item">
-                <p><a href="#">About me</a></p>
+                <p><a href="#" class="nav-link">About me</a></p>
             </div>
             <div class="menu-item">
-                <p><a href="#">Contact</a></p>
+                <!-- <p><a href="#">Contact</a></p> -->
+                <p><button type="button" class="btn contact-btn rounded-2 d-flex">Contact <img
+                            src="assets/images/contact_arrow.svg" alt="arrow"></button></p>
+
             </div>
         </div>
     </div>
