contact btn hover effect

--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
                         <a href="#" class="nav-link">Services</a>
                         <a href="#" class="nav-link">Work</a>
                         <a href="#" class="nav-link">About me</a>
-                        <button type="button" class="btn contact-btn rounded-2 d-flex">Contact <img
-                                src="assets/images/contact_arrow.svg" alt="arrow"></button>
+                        <button type="button" class="btn contact-btn rounded-2 d-flex">Contact
+                            <!-- <img src="assets/images/contact_arrow.svg" alt="arrow"> -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
+                                fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M24.8726 13.58C21.8629 13.58 19.128 10.8334 19.1372 7.81718L19.1409 6.58052H16.6719L16.6681 7.81718C16.6615 10.011 17.6157 12.0688 19.1185 13.58H3.88586L3.8784 16.0534H19.1111C17.5992 17.5646 16.6325 19.6224 16.6259 21.8162L16.6221 23.0529H19.0912L19.0949 21.8162C19.104 18.8 21.8554 16.0534 24.8651 16.0534H26.0996L26.1071 13.58H24.8726Z"
+                                    fill="#030303" />
+                            </svg>
+                        </button>
                     </div>
 
                     <!-- Custom Hamburger for Mobile -->
@@ -72,13 +79,11 @@
                     <div class="col-12">
                         <h1 class="hero-line">Understand</h1>
                     </div>
-                    <div class="col-12 d-flex flex-wrap" style="gap: 20px;">
-                        <div class="pill-image d-flex align-items-center justify-content-center">
-                            <img src="assets/images/graphic.svg" alt="graphic_image" class="img-fluid"/>
-                        </div>
+                    <div class="col-12 d-flex flex-wrap gap-5">
+                        <img src="assets/images/graphic.svg" alt="graphic_image" class="hero-section-lg-img d-none d-md-block" />
                         <h1 class="hero-line d-flex align-items-end">Create</h1>
                     </div>
-                    <div class="col-12 d-flex flex-column justify-content-xl-between align-items-xl-center flex-xl-row">
+                    <div class="col-12 d-flex flex-column justify-content-xl-between align-items-xl-center flex-xl-row mt-4">
                         <h1 class="hero-line">Connect</h1>
                         <p class="hero-subtitle mb-0 d-flex justify-content-center w-auto">
                             I'm an independent UI/UX & Product Designer crafting clean digital experiences from India.
